--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --inline --host 0.0.0.0 --port 5000 --history-api-fallback"
   },
   "dependencies": {
+    "opn": "^4.0.2",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
@@ -25,11 +26,12 @@
     "html-loader": "^0.3.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
+    "morgan": "^1.7.0",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "vue-hot-reload-api": "^1.2.2",
-    "vue-loader": "^7.2.0",
     "vue-html-loader": "^1.2.0",
+    "vue-loader": "^7.2.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.14.0"
   },
